made the slider with multiple icon set

--- a/entry/src/main/resources/base/layout/emojicon_grid.xml
+++ b/entry/src/main/resources/base/layout/emojicon_grid.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
+<ListContainer
     xmlns:ohos="http://schemas.huawei.com/res/ohos"
     ohos:id="$+id:Emoji_GridView"
     ohos:height="match_parent"
     ohos:width="match_parent"
-    ohos:background_element="$color:transparent"
+    ohos:background_element="$color:black"
     ohos:min_width="40vp"
     ohos:orientation="vertical"
     ohos:top_padding="5vp"
