--- a/entry/src/main/resources/base/layout/ability_main.xml
+++ b/entry/src/main/resources/base/layout/ability_main.xml
@@ -3,17 +3,13 @@
     xmlns:ohos="http://schemas.huawei.com/res/ohos"
     ohos:height="match_parent"
     ohos:width="match_parent"
-    ohos:alignment="center"
     ohos:orientation="vertical">
-
-    <Text
-        ohos:id="$+id:text_helloworld"
+    <DirectionalLayout
+        ohos:id="$+id:main_fraction"
         ohos:height="match_content"
-        ohos:width="match_content"
-        ohos:background_element="$graphic:background_ability_main"
-        ohos:layout_alignment="horizontal_center"
-        ohos:text="$string:mainability_HelloWorld"
-        ohos:text_size="40vp"
+        ohos:background_element="#FFFFEEAD"
+        ohos:width="match_parent"
         />
+
 
 </DirectionalLayout>
