--- a/entry/src/main/resources/base/layout/emojicon_item.xml
+++ b/entry/src/main/resources/base/layout/emojicon_item.xml
@@ -3,10 +3,11 @@
     xmlns:ohos="http://schemas.huawei.com/res/ohos"
     ohos:height="match_parent"
     ohos:width="match_parent"
-    ohos:orientation="vertical">
+    ohos:orientation="vertical"
+>
     <Image
-        ohos:height="64vp"
-        ohos:width="64vp"
+        ohos:height="44vp"
+        ohos:width="44vp"
         ohos:id="$+id:emoji_icon"/>
 
 </DirectionalLayout>
