add all icons to the keyboard layout according to the category

--- a/entry/src/main/resources/base/layout/emojicon_item.xml
+++ b/entry/src/main/resources/base/layout/emojicon_item.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <DirectionalLayout
     xmlns:ohos="http://schemas.huawei.com/res/ohos"
+    xmlns:custom="http://schemas.huawei.com/res/custom"
     ohos:height="match_parent"
     ohos:width="match_parent"
     ohos:orientation="vertical"
 >
-    <Image
-        ohos:height="44vp"
-        ohos:width="44vp"
-        ohos:id="$+id:emoji_icon"/>
+    <com.sithagi.kitkatemoji.EmojiconTextView
+        ohos:height="match_content"
+        ohos:width="match_content"
+        ohos:padding="2vp"
+        ohos:id="$+id:emoji_icon"
+        ohos:layout_alignment="center"
+        ohos:text_alignment="center"
+        custom:emojiconSize="30fp"
+
+        />
 
 </DirectionalLayout>
