--- a/entry/src/main/resources/base/layout/ability_main.xml
+++ b/entry/src/main/resources/base/layout/ability_main.xml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <DirectionalLayout
     xmlns:ohos="http://schemas.huawei.com/res/ohos"
+    xmlns:custom="http://schemas.huawei.com/res/custom"
     ohos:height="match_parent"
     ohos:width="match_parent"
     ohos:orientation="vertical">
+
+    <DirectionalLayout
+        ohos:height="0"
+        ohos:width="match_parent"
+        ohos:weight="1">
+
+        <com.sithagi.kitkatemoji.EmojiconTextView
+            ohos:id="$+id:txt_sendMessage"
+            ohos:height="match_content"
+            ohos:width="match_parent"
+            ohos:background_element="#fff"
+            ohos:text="Hello"
+            custom:emojiconSize="14fp"
+            />
+    </DirectionalLayout>
+
+
+    <include
+        ohos:height="match_content"
+        ohos:width="match_parent"
+        ohos:layout="$layout:emoji_footer"/>
+
+
     <DirectionalLayout
         ohos:id="$+id:main_fraction"
         ohos:height="match_content"
-        ohos:background_element="#FFFFEEAD"
         ohos:width="match_parent"
+        ohos:background_element="#FFFFEEAD"
+
         />
 
 
