--- a/entry/src/main/resources/base/layout/emojiicons.xml
+++ b/entry/src/main/resources/base/layout/emojiicons.xml
@@ -4,6 +4,7 @@
     xmlns:custom="http://schemas.huawei.com/res/custom"
     ohos:height="match_parent"
     ohos:width="match_parent"
+    ohos:id="$+id:main_fractions"
     ohos:orientation="vertical">
 
     <DirectionalLayout
