--- a/entry/src/main/resources/base/layout/ability_main.xml
+++ b/entry/src/main/resources/base/layout/ability_main.xml
@@ -9,7 +9,8 @@
     <DirectionalLayout
         ohos:height="0"
         ohos:width="match_parent"
-        ohos:weight="1">
+        ohos:weight="1"
+        ohos:margin="12fp">
 
         <com.sithagi.kitkatemoji.EmojiconTextView
             ohos:id="$+id:txt_sentMessage"
@@ -17,7 +18,7 @@
             ohos:width="match_parent"
             ohos:background_element="#fff"
             ohos:text="Hello"
-            custom:emojiconSize="14fp"
+            custom:emojiconSize="24fp"
             />
     </DirectionalLayout>
 
@@ -34,8 +35,6 @@
         ohos:width="match_parent"
         ohos:visibility="hide"
         ohos:background_element="#FFFFEEAD"
-
-
         />
 
 
