--- a/entry/src/main/resources/base/layout/emoji_footer.xml
+++ b/entry/src/main/resources/base/layout/emoji_footer.xml
@@ -15,6 +15,7 @@
             ohos:id="$+id:btn_chat_emoji"
             ohos:height="68vp"
             ohos:width="68vp"
+            ohos:scale_mode="zoom_center"
             ohos:background_element="$media:ic_vp_smileys"
             />
     </DirectionalLayout>
