--- a/entry/src/main/resources/base/layout/emoji_footer.xml
+++ b/entry/src/main/resources/base/layout/emoji_footer.xml
@@ -16,7 +16,7 @@
             ohos:width="48vp"
             ohos:height="48vp"
             ohos:scale_mode="zoom_center"
-            ohos:background_element="$media:ic_vp_smileys"
+            ohos:image_src="$media:ic_vp_smileys"
             />
     </DirectionalLayout>
 
