--- a/entry/src/main/resources/base/layout/ability_main.xml
+++ b/entry/src/main/resources/base/layout/ability_main.xml
@@ -14,7 +14,7 @@
         ohos:width="match_parent"
         ohos:background_element="#000">
 
-        <com.sithagi.kitkatemoji.EmojiconTextView
+        <TextField
             ohos:id="$+id:txt_sentMessage"
             ohos:height="match_content"
             ohos:width="match_parent"
